2013-12-17 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: fix task.iter_buffers() and worker.iter_buffers() to allow
	optional argument match_keys to be an empty list for convenience. It
	should be set to None to disable match_keys check. Also check that
	match_keys is a true key/node sequence and not a string.

2013-11-05 S. Thiell <stephane.thiell@cea.fr>

	* EngineClient.py: Hide unwanted debug messages: when aborting a task,
	cleanup of associated resources may lead to dropped inter-task messages
	through the EnginePort mechanism. We now only display associated warning
	messages when debugging is enabled...

	* Task.py: Fix abort() race condition.

	* CLI/Clush.py: Fix a defect to allow the use of command timeout when
	copying files (with clush -u delay -c ..., ticket #220).

2013-11-04 A. Degremont <aurelien.degremont@cea.fr>

	* Worker/Rsh.py: Add a Rsh worker. It is compatible with rsh clones
	like mrsh/krsh. (ticket #216).
	* Task.py: Add a 'worker' default option for Task object. It is used
	in Task.shell() and Task.copy().

2012-09-13 S. Thiell <stephane.thiell@cea.fr>

	* Engine.py: Allow EngineTimer with immediate fire date, that is, a fire
	delay of 0s. Obviously not fired in time, such a timer will still be armed
	and fired as soon as possible (ticket #200).

2012-08-27 S. Thiell <stephane.thiell@cea.fr>

	* Engine.py: Fix catch-all used in case of KeyboardInterrupt exception
	during runloop, resulting in ghost engine clients in that case and results
	possibly not cleaned properly (ticket #199).

2012-08-01 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Fix clush_exit() side effects thanks to latest task
	termination improvements (tickets #185).

	* Task.py: Avoid termination race condition when using multiple threads
	and calling abort()+join() from another thread (tickets #197).

2012-07-09 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: "All nodes" extended pattern support with @* (ticket #193).
